ALF-1666 Печатная форма "Опись изменений договора" не формируется
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5655 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-delta-list-byid/contract-delta-list-byid.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-delta-list-byid/contract-delta-list-byid.jrxml
@@ -61,7 +61,7 @@
 	<field name="col_Item.DocName" class="java.lang.String">
 		<fieldDescription><![CDATA[Вложение.ТипДокумента]]></fieldDescription>
 	</field>
-	<field name="col_Item.StatusDate" class="java.lang.String">
+	<field name="col_Item.StatusDate" class="java.util.Date">
 		<fieldDescription><![CDATA[Вложение.Дата смены статус]]></fieldDescription>
 	</field>
 	<field name="col_Item.Status" class="java.lang.String">
