--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-stages/stages.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/contract-stages/stages.jrxml
@@ -160,7 +160,7 @@
 	<detail>
 		<band height="26" splitType="Stretch">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="9a15d73a-b739-42af-93f0-ea9d412fbdec" style="styleOdd" positionType="Float" stretchType="RelativeToBandHeight" mode="Opaque" x="0" y="0" width="60" height="26"/>
+				<reportElement uuid="9a15d73a-b739-42af-93f0-ea9d412fbdec" style="styleOdd" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="60" height="26"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -174,8 +174,8 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{col_Number}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="23fa3f53-c319-4a04-ad6b-356bbf10e52a" style="styleOdd" positionType="Float" stretchType="RelativeToBandHeight" mode="Opaque" x="60" y="0" width="116" height="26"/>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="23fa3f53-c319-4a04-ad6b-356bbf10e52a" style="styleOdd" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="60" y="0" width="116" height="26"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -189,8 +189,8 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{col_Title}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="4310e47d-1c2a-417f-8216-3bc76fdbaf44" style="styleOdd" positionType="Float" stretchType="RelativeToBandHeight" mode="Opaque" x="176" y="0" width="108" height="26"/>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="4310e47d-1c2a-417f-8216-3bc76fdbaf44" style="styleOdd" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="176" y="0" width="108" height="26"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -204,8 +204,8 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{col_Status}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="063e3af3-f53b-484b-8556-0b28c7e9fc9a" style="styleOdd" positionType="Float" stretchType="RelativeToBandHeight" mode="Opaque" x="284" y="0" width="93" height="26"/>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="063e3af3-f53b-484b-8556-0b28c7e9fc9a" style="styleOdd" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="284" y="0" width="93" height="26"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -220,7 +220,7 @@
 				<textFieldExpression><![CDATA[$F{col_Sum}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd.MM.yyyy" isBlankWhenNull="true">
-				<reportElement uuid="77dd4879-8cff-47c3-b5ac-5d9faa96a066" style="styleOdd" positionType="Float" stretchType="RelativeToBandHeight" mode="Opaque" x="377" y="0" width="101" height="26"/>
+				<reportElement uuid="77dd4879-8cff-47c3-b5ac-5d9faa96a066" style="styleOdd" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="377" y="0" width="101" height="26"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -235,7 +235,7 @@
 				<textFieldExpression><![CDATA[$F{col_StartDate_Plan} != null ? $F{col_StartDate_Plan} : ""]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd.MM.yyyy" isBlankWhenNull="true">
-				<reportElement uuid="c237a6c3-d88b-4070-b89d-ce10c53e6d5e" style="styleOdd" positionType="Float" stretchType="RelativeToBandHeight" mode="Opaque" x="478" y="0" width="109" height="26"/>
+				<reportElement uuid="c237a6c3-d88b-4070-b89d-ce10c53e6d5e" style="styleOdd" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="478" y="0" width="109" height="26"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -250,7 +250,7 @@
 				<textFieldExpression><![CDATA[$F{col_EndDate_Plan} != null ? $F{col_EndDate_Plan} : ""]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd.MM.yyyy" isBlankWhenNull="true">
-				<reportElement uuid="2a8ffd86-e97a-4ae5-8b81-9e4f176bb8c9" style="styleOdd" positionType="Float" stretchType="RelativeToBandHeight" mode="Opaque" x="587" y="0" width="102" height="26"/>
+				<reportElement uuid="2a8ffd86-e97a-4ae5-8b81-9e4f176bb8c9" style="styleOdd" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="587" y="0" width="102" height="26"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -265,7 +265,7 @@
 				<textFieldExpression><![CDATA[$F{col_StartDate_Fact} != null ? $F{col_StartDate_Fact}: ""]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd.MM.yyyy" isBlankWhenNull="true">
-				<reportElement uuid="aceb5ff6-ee27-4aaa-93c6-b7bd1d8992c9" style="styleOdd" positionType="Float" stretchType="RelativeToBandHeight" mode="Opaque" x="689" y="0" width="113" height="26"/>
+				<reportElement uuid="aceb5ff6-ee27-4aaa-93c6-b7bd1d8992c9" style="styleOdd" positionType="Float" stretchType="RelativeToTallestObject" mode="Opaque" x="689" y="0" width="113" height="26"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
