[~] дизайн отчетов "Дерево поручений" (переписан и доработан  в соответствии с ТЗ)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5697 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-doc-tree/exec-doc-tree.jrxml
+++ b/lecm-errands/repo/src/main/config/reportdefinitions/deploy/jasper/exec-doc-tree/exec-doc-tree.jrxml
@@ -63,7 +63,7 @@
 	<detail>
 		<band height="30" splitType="Stretch">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="279c1409-10d9-772c-8311-1bbaaae755e4" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="802" height="30" isPrintWhenDetailOverflows="true" backcolor="#CCCCCC"/>
+				<reportElement uuid="279c1409-10d9-772c-8311-1bbaaae755e4" stretchType="RelativeToTallestObject" mode="Opaque" x="0" y="0" width="802" height="30" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true" backcolor="#CCCCCC"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
