--- a/lecm-base/share/src/main/webapp/css/lecm-base/base-styles.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/base-styles.css
@@ -15,3 +15,4 @@
 @import "/share/res/components/upload/dnd-upload.css";
 @import "/share/res/css/lecm-base/components/tree-picker.css";
 @import "/share/res/css/lecm-base/components/contractors.css";
+@import "/share/res/css/lecm-base/components/form-with-preview.css";
