--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
@@ -50,3 +50,32 @@
     line-height: 16px;
     display: inline-block;
 }
+
+.dnd-uploader div.big-uploader-block {
+	float: left;
+	margin: -12px 0 0 !important;
+}
+.dnd-uploader div.big-uploader-block fieldset {
+	width: 650px;
+	height: 500px;
+	border: 2px dashed #9d9d9d;
+	padding: 10px;
+	text-align: center;
+	white-space: normal;
+}
+.dnd-uploader div.big-uploader-block fieldset legend {
+	color: #666;
+	background: #fff;
+}
+.dnd-uploader .big-uploader-block.dndDocListHighlight fieldset {
+	border: 2px solid #4F94C9;
+}
+.dnd-uploader .big-uploader-block img.uploader-button {
+	margin: 200px 0 5px;
+	cursor: pointer;
+}
+.dnd-uploader .big-uploader-block span.drag-tip {
+	color: #a7a7a7;
+	line-height: 16px;
+	display: inline-block;
+}
