ALF-1647: Валюта в одну строке с суммой на форме просмотра.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5708 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-table-data.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-table-data.css
@@ -124,3 +124,18 @@
 .yui-skin-lecmTheme .yui-panel table.view-stage tr td {
     width: 33%;
 }
+
+.yui-skin-lecmTheme .yui-panel table.view-stage .price-control,
+.yui-skin-lecmTheme .yui-panel table.view-stage .price-sum,
+.yui-skin-lecmTheme .yui-panel table.view-stage .price-currency {
+    overflow: hidden;
+}
+
+.yui-skin-lecmTheme .yui-panel table.view-stage .price-sum {
+    float: left;
+    width: 195px;
+}
+
+.yui-skin-lecmTheme .yui-panel table.view-stage .price-currency .viewmode-label {
+    display: none;
+}
