ALF-1676: Выровнены поля фактических дат на форме просмотра этапа договора.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5709 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-table-data.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-table-data.css
@@ -139,3 +139,8 @@
 .yui-skin-lecmTheme .yui-panel table.view-stage .price-currency .viewmode-label {
     display: none;
 }
+
+.yui-skin-lecmTheme .yui-panel table.view-stage tr.view-stage-dates .viewmode-value {
+	width: 200px;
+}
+
