Контрол загрузки файлов с предпросмотром -добавлена возможность удаления вложения
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5711 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/dnd-uploader-control.css
@@ -79,3 +79,7 @@
 	line-height: 16px;
 	display: inline-block;
 }
+div.form-field.dnd-uploader div.uploader-remove-button {
+	clear: both !important;
+	display: none;
+}
