ALF-1690: Удалил хардкод.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5778 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/form-with-preview.css
@@ -1,4 +1,8 @@
 .from-with-preview .yui-g .yui-u.first {
+	width: 700px;
+}
+
+.documents-list-create-dialog-container .from-with-preview .yui-g .yui-u.first {
 	width: 815px;
 }
 
