--- a/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-discipline/approval-discipline.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/deploy/jasper/approval-discipline/approval-discipline.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ApproveDiscipline" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" uuid="28e61b22-f23c-49c3-ba14-4928c3b8793a">
-	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="249"/>
+	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<property name="dataSource" value="ru.it.lecm.contracts.reports.DSProdiverApprovalSummaryByPeriod"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#F4F5F5">
@@ -10,6 +10,10 @@
 			<style backcolor="#E2DFD6"/>
 		</conditionalStyle>
 	</style>
+	<parameter name="periodDate_lo" class="java.util.Date" isForPrompting="false"/>
+	<parameter name="periodDate_hi" class="java.util.Date" isForPrompting="false">
+		<defaultValueExpression><![CDATA[new Date()]]></defaultValueExpression>
+	</parameter>
 	<field name="col_Period.Start" class="java.util.Date">
 		<fieldDescription><![CDATA[Начало периода]]></fieldDescription>
 	</field>
@@ -59,7 +63,7 @@
 					<font fontName="DejaVu Sans Mono" size="14" isBold="true" pdfEncoding="Cp1251"/>
 					<paragraph spacingBefore="5" spacingAfter="5"/>
 				</textElement>
-				<textFieldExpression><![CDATA["за период"+ ($F{col_Period.Start} != null ? msg( " с {0,date,short}", $F{col_Period.Start}) : "") + ($F{col_Period.End} != null ? msg( " по {0,date,short}", $F{col_Period.End}) : "")]]></textFieldExpression>
+				<textFieldExpression><![CDATA["за период"+ ($P{periodDate_lo} != null ? msg( " с {0,date,short}", $P{periodDate_lo}) : "") + ($P{periodDate_hi} != null ? msg( " по {0,date,short}", $P{periodDate_hi}) : "")]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
@@ -161,7 +165,7 @@
 		<band height="30" splitType="Immediate">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} <= 200]]></printWhenExpression>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" mode="Opaque" x="0" y="0" width="186" height="30" isRemoveLineWhenBlank="true"/>
+				<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" mode="Opaque" x="0" y="0" width="186" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -176,7 +180,7 @@
 				<textFieldExpression><![CDATA[$F{col_Employee}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" mode="Opaque" x="371" y="0" width="183" height="30" isRemoveLineWhenBlank="true"/>
+				<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" mode="Opaque" x="371" y="0" width="183" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -191,7 +195,7 @@
 				<textFieldExpression><![CDATA[$F{col_Employee.Unit}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" mode="Opaque" x="186" y="0" width="185" height="30" isRemoveLineWhenBlank="true"/>
+				<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" mode="Opaque" x="186" y="0" width="185" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -206,7 +210,7 @@
 				<textFieldExpression><![CDATA[$F{col_Employee.StaffPosition}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" mode="Opaque" x="554" y="0" width="88" height="30" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+				<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" mode="Opaque" x="554" y="0" width="88" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -221,7 +225,7 @@
 				<textFieldExpression><![CDATA[$F{col_Employee.MissedApproves}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" mode="Opaque" x="642" y="0" width="80" height="30" isRemoveLineWhenBlank="true"/>
+				<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" mode="Opaque" x="642" y="0" width="80" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
@@ -236,7 +240,7 @@
 				<textFieldExpression><![CDATA[$F{col_Employee.AvgApproved}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" mode="Opaque" x="722" y="0" width="80" height="30" isRemoveLineWhenBlank="true"/>
+				<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" mode="Opaque" x="722" y="0" width="80" height="30" isPrintWhenDetailOverflows="true"/>
 				<box>
 					<pen lineWidth="0.5" lineColor="#78C0D4"/>
 					<topPen lineWidth="0.5" lineColor="#78C0D4"/>
