ALF-1660, ALF-1710: Исправлены знак вопроса и "плавающие числа" на форме создания/редактирования этапа договора.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5827 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-table-data.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-table-data.css
@@ -42,7 +42,10 @@
     width: 35em;
 }
 .yui-skin-lecmTheme .yui-panel.lecm-contract-table-structure_stage_edit div.form-field > div:not(.datagrid):not(.viewmode-field):not(.subscribe) {
-    margin-left: 130px;
+    margin: 0;
+    line-height: normal;
+    width: 100%;
+    white-space: pre-wrap;
 }
 .yui-skin-lecmTheme .yui-panel.lecm-contract-table-structure_stage_edit div.form-field div.format-info {
     clear: both !important;
