ALF-1718: В блоке "Вложения" при наведении мышки в поле "Actions"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5835 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/base-styles.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/base-styles.css
@@ -16,3 +16,10 @@
 @import "/share/res/css/lecm-base/components/tree-picker.css";
 @import "/share/res/css/lecm-base/components/contractors.css";
 @import "/share/res/css/lecm-base/components/form-with-preview.css";
+
+@import "/share/res/components/preview/web-preview.css";
+@import "/share/res/components/preview/WebPreviewerHTML.css";
+@import "/share/res/components/preview/Audio.css";
+@import "/share/res/components/preview/Image.css";
+@import "/share/res/extras/components/preview/viewer-common.css";
+@import "/share/res/extras/components/preview/PdfJs.css";
