--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/base-menu/base-menu.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/base-menu/base-menu.css
@@ -50,3 +50,8 @@
 #lecm-menu #menu-buttons #menu-buttons-bj-settingsBtn span.first-child {
     background: url('/share/res/images/lecm-dictionary/dictionary_32.png') no-repeat 4px 4px;
 }
+
+/* ModelEditor menu */
+#lecm-menu #menu-buttons #menu-buttons-modelEditorHomeBtn span.first-child {
+	background: url('/share/res/images/lecm-statemachine-editor/home.png') no-repeat 4px 4px;
+}
