ALF-1722: В doc-model-list сделать кнопку редактирования модели (рядом с кнопкой редактирования формы)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5850 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/webapp/components/model-editor/model-editor.css
+++ b/lecm-model-editor/share/src/main/webapp/components/model-editor/model-editor.css
@@ -4,12 +4,17 @@
    cursor: pointer;
    padding-right: 15px;
 }
+.models .yui-dt-liner a.edit-model
+{
+   background: transparent url(../images/edit-16.png) no-repeat scroll center center;
+   cursor: pointer;
+}
 .models .yui-dt-liner a.edit-form
 {
    background: transparent url(../images/edit-16.png) no-repeat scroll center center;
    cursor: pointer;
 }
-.models td.yui-dt-last .yui-dt-liner a
+.models .yui-dt-liner a
 {
    background-position: 0 center;
    background-repeat: no-repeat;
