ALF-1722: Вызов машины состояний сделать с формы doc-model-list добавив дополнительную кнопку рядом с редактором форм и моделей.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5853 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/webapp/components/model-editor/model-editor.css
+++ b/lecm-model-editor/share/src/main/webapp/components/model-editor/model-editor.css
@@ -14,6 +14,11 @@
    background: transparent url(../images/edit-16.png) no-repeat scroll center center;
    cursor: pointer;
 }
+.models .yui-dt-liner a.edit-statemachine
+{
+   background: transparent url(../images/edit-16.png) no-repeat scroll center center;
+   cursor: pointer;
+}
 .models .yui-dt-liner a
 {
    background-position: 0 center;
