ALF-1722: Внешний вид
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5856 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-model-editor/share/src/main/webapp/components/model-editor/model-editor.css
+++ b/lecm-model-editor/share/src/main/webapp/components/model-editor/model-editor.css
@@ -1,22 +1,22 @@
 .models .yui-dt-liner a.delete
 {
-   background: transparent url(../images/delete-16.png) no-repeat scroll center center;
+   background: transparent url(/share/res/components/images/delete-16.png) no-repeat scroll center center;
    cursor: pointer;
    padding-right: 15px;
 }
 .models .yui-dt-liner a.edit-model
 {
-   background: transparent url(../images/edit-16.png) no-repeat scroll center center;
+   background: transparent url(/share/res/images/lecm-model-list/model_edit.png) no-repeat scroll center center;
    cursor: pointer;
 }
 .models .yui-dt-liner a.edit-form
 {
-   background: transparent url(../images/edit-16.png) no-repeat scroll center center;
+   background: transparent url(/share/res/images/lecm-model-list/form_edit.png) no-repeat scroll center center;
    cursor: pointer;
 }
 .models .yui-dt-liner a.edit-statemachine
 {
-   background: transparent url(../images/edit-16.png) no-repeat scroll center center;
+   background: transparent url(/share/res/images/lecm-model-list/statemachine_edit.png) no-repeat scroll center center;
    cursor: pointer;
 }
 .models .yui-dt-liner a
